<resources>
    <string name="app_name">Puy2Docs</string>
    <string name="title_activity_base_login">Base Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_same_password">This password is not the same</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_birthday">Invalid form birthday (J)J/(M)M/AAAA</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Mot de passe</string>
    <string name="passwordBis">Retaper le mot de passe</string>
    <string name="lastname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="birthday">Date de naissance</string>
    <string name="join">Créer un Compte</string>
    <string name="login">Se connecter</string>

    <string name="drive">Mes Fichiers</string>
    <string name="localstore">Fichiers Locaux</string>

    <string name="account_exists">Vous avez déjà un compte ?</string>

    <string name="sign_out">Se déconnecter</string>
    <string name="signed_out">Se connecter</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="desc_google_icon">Google Logo</string>

    <string name="server_client_id">474071730911</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Menu action -->
    <string name="action_settings">Settings</string>
    <string name ="about_dev">about_dev</string>
    <string name="action_search">Search</string>
    <string name="search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_done">Done</string>
    <string name="fbk_share">Facebook</string>
    <string name="google_share">Google+</string>
    <string name="puydoc2_share">PuyDoc2</string>


    <!-- Menu drawer -->
    <!-- TODO: pbl name="home" utilisé 2 fois -->
    <!--<string name="home">Mes Fichier</string>
    <string name="parameter">Paramètres</string>-->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_local_mode">LocalModeActivity</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">cloudm120152016.puy2docs</string>
    <string name="content_authority">cloudm120152016.puy2docs</string>

    <!-- Menu drawer -->
    <string name="home">Mes Fichiers</string>
    <string name="sharing">Partagé avec moi</string>
    <string name="local">Fichiers hors ligne</string>
    <string name="setting">Paramètres</string>

    <!-- Bottom sheet new-->
    <string name="new_item">Nouveau</string>
    <string name="new_folder">Nouveau Dossier</string>
    <string name="new_file">Importer Fichier</string>

    <!-- Snackbar -->
    <string name="fail">Une erreur a été survenu</string>

    <string name="ok_new_folder">Le dossier a été créé</string>
    <string name="no_new_folder">Le dossier n\'a pas été créé</string>
    <string name="ok_new_file">Le fichier a été créé</string>
    <string name="no_new_file">Le fichier n\'a pas été créé</string>

    <string name="ok_del_folder">Le dossier a été supprimé</string>
    <string name="no_del_folder">Le dossier n\'a pas été supprimé</string>
    <string name="ok_del_file">Le fichier a été supprimé</string>
    <string name="no_del_file">Le fichier n\'a pas été supprimé</string>

    <string-array name="titles">
        <item>Meme 1</item>
        <item>Meme 2</item>
        <item>Meme 3</item>
        <item>Meme 4</item>
        <item>Meme 5</item>
        <item>Meme 6</item>
        <item>Meme 7</item>
        <item>Meme 8</item>
        <item>Meme 9</item>
        <item>Meme 10</item>
    </string-array>
    <string-array name="descriptions">
        <item>This is description 1</item>
        <item>This is description 2</item>
        <item>This is description 3</item>
        <item>This is description 4</item>
        <item>This is description 5</item>
        <item>This is description 6</item>
        <item>This is description 7</item>
        <item>This is description 8</item>
        <item>This is description 9</item>
        <item>This is description 10</item>
    </string-array>
    <string name="title_activity_share_app">ShareAppActivity</string>
    <string name="title_activity_selected_folder_file">SelectedFolderFileActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_edit_searchview">EditSearchview</string>

</resources>
