<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_reset_checked"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_cached_black_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_done"
        android:title="@string/action_done"
        android:icon="@drawable/ic_done_black_24dp"
        app:showAsAction="always"/>


    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:actionProviderClass="android.widget.ShareActionProvider"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_google_share"
                android:title="@string/google_share" />
            <item android:id="@+id/action_fbk_share"
                android:title="@string/fbk_share" />
            <item android:id="@+id/action_puydoc2_share"
                android:title="@string/puydoc2_share" />
        </menu>

    </item>
    <item android:id="@+id/action_Delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="200"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"/>

</menu>