<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cloudm120152016.puy2docs.MainActivity"
    android:orientation="vertical"
    android:gravity="bottom">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login choice Activity"
        android:id="@+id/choice"
        android:onClick="changeActivityLoginChoice" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mes fichiers"
        android:id="@+id/files"
        android:onClick="changeActivityFiles" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in Activity"
        android:id="@+id/signin"
        android:onClick="changeActivitySignIn" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:id="@+id/button"
            android:onClick="changeActivitySignUp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_exists"
                android:id="@+id/account_exists" />

            <View android:layout_height="fill_parent"
                android:layout_width="9dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/login"
                android:autoLink="all"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
